<resources>
    <string name="app_name">PMP project</string>
    <string name="banner" translatable="false">Notes</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="go_to_register">Register a new account</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go back to login</string>
    <string name="invalid_email">Please provide a valid email!</string>
    <string name="invalid_password">Min password length should be 8 characters!</string>
    <string name="missing_email">Email is required</string>
    <string name="missing_password">Password is required</string>
    <string name="banner_description">Welcome</string>
    <string name="register_success">User has been register successfully!</string>
    <string name="login_success">Login success!</string>
    <string name="register_failed">Failed to register!</string>
    <string name="login_failed">Failed to login!</string>
    <string name="login_other">Or login with:</string>
    <string name="logout">Logout</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="go_back">Go back</string>
    <string name="saved_users">Saved users</string>
    <string name="saved_users_on_device">Saved users on this device</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="save_success">Saved successfully</string>
    <string name="error">Error</string>
    <string name="user_is_already_logged">User is logged in already!</string>
    <string name="delete">Delete</string>
    <string name="failed_to_get_notes">Failed to get notes</string>
    <string name="delete_success">Delete success</string>
    <string name="cancel">Cancel</string>

    <string name="facebook_app_id">397975522104185</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">904053dce56238f713711d8837c66044</string>



</resources>